objects/nDESIGN__Section_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__Display_Order__c</fullName>
        <defaultValue>1.01</defaultValue>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Field_Set_Key__c</fullName>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Layout</label>
        <referenceTo>nDESIGN__Layout__c</referenceTo>
        <relationshipLabel>Section Configurations</relationshipLabel>
        <relationshipName>Section_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Parent_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Configuration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>nDESIGN__Section_Configuration__c.nDESIGN__Screen_Section__c</field>
                <operation>equals</operation>
                <valueField>$Source.nDESIGN__Screen_Section__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>nDESIGN__Section_Configuration__c</referenceTo>
        <relationshipLabel>Child Configurations</relationshipLabel>
        <relationshipName>Child_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Parent_Relationship_Name__c</fullName>
        <label>Parent Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Screen_Section__c</fullName>
        <label>Screen Section</label>
        <referenceTo>nDESIGN__Screen_Section__c</referenceTo>
        <relationshipLabel>Section Configurations</relationshipLabel>
        <relationshipName>Section_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Section_Header__c</fullName>
        <description>A header to display at the top of this section.</description>
        <inlineHelpText>A header to display at the top of this section.</inlineHelpText>
        <label>Section Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Section_Resource_Class__c</fullName>
        <description>Deprecated to Screen_Section__c.Section_Resource__c</description>
        <label>-D Section Resource Class</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nDESIGN__sObject_Type__c</fullName>
        <label>sObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>-D Section Configuration</label>
    <listViews>
        <fullName>nDESIGN__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Section Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nDESIGN__Child_Display_Order</fullName>
        <active>true</active>
        <description>Ensures children configurations are ordered after their parents.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( nDESIGN__Parent_Configuration__c ) ) , nDESIGN__Display_Order__c  &lt;=  nDESIGN__Parent_Configuration__r.nDESIGN__Display_Order__c )</errorConditionFormula>
        <errorMessage>Child configurations must follow their parents in display order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nDESIGN__Parent_Integrity</fullName>
        <active>false</active>
        <description>Ensures Parent Configuration and Parent Relationship Name are both populated if one is.</description>
        <errorConditionFormula>OR( AND(  NOT( ISBLANK( nDESIGN__Parent_Configuration__c ) )  , ISBLANK( nDESIGN__Parent_Relationship_Name__c ) ) , AND( NOT( ISBLANK( nDESIGN__Parent_Relationship_Name__c ) ) , ISBLANK( nDESIGN__Parent_Configuration__c ) ) )</errorConditionFormula>
        <errorMessage>Parent Configuration and Parent Relationship Name must both be set.</errorMessage>
    </validationRules>
</CustomObject>